log
Thu 28 Mar 2024 02:40:46 PM UTC: 
 tests:  0|6
total_score: 0/70
160aa49
Thu 28 Mar 2024 02:53:54 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
3370ba9
Thu 28 Mar 2024 02:58:30 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
bc9129c
Thu 28 Mar 2024 03:05:29 PM UTC: 
 list.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
 tests:  0|6
total_score: 0/70
56d19ee
Thu 28 Mar 2024 03:15:34 PM UTC: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:65:9: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   65 |     list->prev = newNode;
      |         ^~
Compilation failed
8330390
Thu 28 Mar 2024 03:15:43 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:64:9: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   64 |     list->prev = newNode;
      |         ^~
Compilation failed
8909740
Thu 28 Mar 2024 03:16:32 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
ba61f27
Thu 28 Mar 2024 07:15:56 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:1: error: control reaches end of non-void function [-Werror=return-type]
   36 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e792ef0
Thu 28 Mar 2024 07:16:48 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|4
total_score: 20/70
18e8bcf
Thu 28 Mar 2024 07:20:59 PM UTC: 
 list.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 20/70
5115cc4
Thu 28 Mar 2024 07:22:41 PM UTC: 
 list.c | 12 +++++++-----
 1 file changed, 7 insertions(+), 5 deletions(-)
 tests:  2|4
total_score: 20/70
db4b6cd
Thu 28 Mar 2024 07:24:27 PM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 20/70
f7a9702
Thu 28 Mar 2024 07:25:49 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  3|4
total_score: 25/70
9bf5326
Thu 28 Mar 2024 07:26:45 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  6|3
total_score: 35/70
db017bd
Thu 28 Mar 2024 11:53:45 PM UTC: 
 list.c | 25 +++++++++++++++----------
 1 file changed, 15 insertions(+), 10 deletions(-)
 tests:  6|3
total_score: 35/70
ebbddbf
Thu 28 Mar 2024 11:58:58 PM UTC: 
 list.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  6|3
total_score: 35/70
c9a8bab
Fri 29 Mar 2024 12:01:39 AM UTC: 
 list.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  6|3
total_score: 35/70
ac29bc6
Fri 29 Mar 2024 12:05:35 AM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  7|3
total_score: 35/70
c44dc22
Fri 29 Mar 2024 12:06:11 AM UTC: 
 list.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  10|2
total_score: 45/70
4e8e2ce
Fri 29 Mar 2024 12:08:06 AM UTC: 
 list.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
 tests:  10|2
total_score: 45/70
909d1e5
Fri 29 Mar 2024 12:11:08 AM UTC: 
 list.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
 tests:  10|2
total_score: 45/70
e18f771
Fri 29 Mar 2024 12:16:00 AM UTC: 
 list.c | 33 ---------------------------------
 1 file changed, 33 deletions(-)
 tests:  10|2
total_score: 45/70
5d5c4f8
Fri 29 Mar 2024 12:17:18 AM UTC: 
 list.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
546d632
Fri 29 Mar 2024 12:21:39 AM UTC: 
 list.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  10|2
total_score: 45/70
0455f42
